--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "better-scroll": "^1.15.2",
+    "dayjs": "^1.8.16",
     "vue": "^1.0.21",
     "vue-resource": "^1.5.1",
     "vue-router": "^0.7.13"
